<resources>
    <string name="app_name">Saju_14133</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="Restaurant_reviewer">Restaurant Reviewer</string>
    <string name="Enter_review_data">Enter Review Data</string>
    <string name="Restaurant_name">Restaurant Name</string>
    <string name="Address">Address</string>
    <string name="Number_Of_Companions">Number of Companions</string>
    <string name="Bill">Bill Amount</string>
    <string name="Tip">Tip</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Rating">Rating</string>
    <string name="Food">Food</string>
    <string name="Wine">Wine</string>
    <string name="Ambience">Ambience</string>
    <string name="Staff">Staff</string>
    <string name="Overall">Overall</string>
    <string name="Submit">Submit</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ten_prcnt">10%</string>
    <string name="twenty_prcnt">20%</string>
    <string name="prcnt2">12.5%</string>
    <string name="prcnt3">15%</string>
    <string name="title_activity_dashboard">Review Dashboard</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_review_dashboard">Review Dashboard</string>
    <string name="Dashboard">Dashboard</string>
</resources>
