<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#000000"
    tools:context="com.reviewer.saju.saju_14133.ReviewScreenActivity"
    android:id="@+id/main_frame1">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_gravity="center">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:text="@string/Enter_review_data"
            android:id="@+id/textView"
            android:textColor="@color/app_text_color"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_weight="1.75"
            android:background="@color/app_title_color"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/app_title_text_size" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/margin_title2"
            android:weightSum="1"
           >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextRestName"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/app_text_color_data"
                android:inputType="text"
                android:hint="@string/Restaurant_name" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editTextDate"
                    android:layout_weight="1"
                    android:textColor="@color/app_text_color_data"
                    android:hint="@string/Date" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/editTextTime"
                    android:layout_weight="1"
                    android:textColor="@color/app_text_color_data"
                    android:hint="@string/Time" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editText_Address"
                android:textColor="@color/app_text_color_data"
                android:hint="@string/Address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextNumCompanion"
                android:textColor="@color/app_text_color_data"
                android:hint="@string/Number_Of_Companions" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextBill"
                    android:layout_weight="1"
                    android:textColor="@color/app_text_color_data"
                    android:hint="@string/Bill"
                    android:clickable="true"
                    android:onClick="popBillDialog"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Tip"
                    android:id="@+id/textView7"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_prcnt"
                    android:id="@+id/button2"
                    android:clickable="true"
                    android:onClick="tip_1"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prcnt2"
                    android:id="@+id/button3"
                    android:clickable="true"
                    android:onClick="tip_2"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prcnt3"
                    android:id="@+id/button4"
                    android:clickable="true"
                    android:onClick="tip_3"/>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editTextTip"
                android:textColor="@color/app_text_color_data"
                android:hint="@string/Tip"
                android:clickable="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_title2"
                android:background="@color/app_title_color">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:text="@string/Rating"
                    android:id="@+id/textViewRating"
                    android:textAllCaps="true"
                    android:textSize="@dimen/app_title2_text_size"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="@dimen/left_margin_title2"
                    android:textColor="@color/app_text_color_data" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Food"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="@dimen/app_title2_text_size"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_weight="1" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarFood"
                android:layout_gravity="center_horizontal"
                android:numStars="@integer/Rating_size"
                android:rating="0"
                android:stepSize="1"
                android:focusable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Wine"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/app_title2_text_size" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarWine"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Ambience"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/app_title2_text_size" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarAmbiance"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Staff"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/app_title2_text_size" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarStaff"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Overall"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/app_title2_text_size" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarOverall"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/Submit"
                android:id="@+id/btnSubmit"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/app_text_color_data"
                android:background="@color/app_title_color"
                android:clickable="true"
                android:onClick="review_submit"/>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</FrameLayout>
