<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context="com.reviewer.saju.saju_14133.MainScreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|top"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/Enter_review_data"
            android:id="@+id/textView"
            android:textColor="@color/app_text_color"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_weight="1.34"
            android:background="@color/app_title_color"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/app_title_text_size" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="518dp"
            android:layout_margin="@dimen/margin_title2"
            android:weightSum="1"
            android:scrollbars="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:layout_weight="1"
                    android:text="@string/Date"
                    android:textColor="@color/app_text_color_data" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:layout_weight="1"
                    android:text="@string/Time"
                    android:textColor="@color/app_text_color_data" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_gravity="center_horizontal"
                android:text="@string/Restaurant_name"
                android:textColor="@color/app_text_color_data"
                android:inputType="text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editText_Address"
                android:text="@string/Address"
                android:textColor="@color/app_text_color_data" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextNumCompanion"
                android:text="@string/Number_Of_Companions"
                android:textColor="@color/app_text_color_data" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextBill"
                    android:layout_weight="1"
                    android:text="@string/Bill"
                    android:textColor="@color/app_text_color_data"
                    android:hint="@string/Bill" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText5"
                    android:layout_weight="1"
                    android:text="@string/Tip"
                    android:textColor="@color/app_text_color_data"
                    android:hint="@string/Tip" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_title2"
                android:background="@color/app_title_color">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:text="@string/Rating"
                    android:id="@+id/textViewRating"
                    android:textAllCaps="true"
                    android:textSize="@dimen/app_title2_text_size"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginLeft="@dimen/left_margin_title2"
                    android:textColor="@color/app_text_color_data" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Food"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="@dimen/app_title2_text_size" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:layout_gravity="center_horizontal"
                android:numStars="@integer/Rating_size"
                android:rating="0"
                android:stepSize="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Wine"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar2"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Ambience"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar3"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Staff"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar4"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Overall"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar5"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
